update 3 files, create 6 files, delete 5 files and move 1 file

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,11 +6,16 @@
 .docker
 
 # Python
-app/__pycache__/
-app/*/__pycache__/
-app/*/*/__pycache__/
-app/*/*/*/__pycache__/
 .env/
 .venv/
 env/
 venv/
+
+# Vscode
+.vscode/
+
+# Idea
+.idea/
+
+# Github
+.github/
