--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: test
-        run: docker-compose run --rm app sh -c "python -m unittest discover"
+        run: docker-compose run -f .docker/docker-compose.yml --rm app sh -c "python -m unittest discover"
       - name: lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run -f .docker/docker-compose.yml --rm app sh -c "flake8"
