--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"MichaelCurrin.auto-commit-msg"
+				"MichaelCurrin.auto-commit-msg",
+				"donjayamanne.python-extension-pack"
 			]
 		}
 	}
