--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -4,7 +4,7 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 COPY ./requirements.txt /tmp/requirements.txt
 RUN apk update && \
-    apk add --no-cache git && \
+    apk add --no-cache git openssh && \
     git config --global user.name "wenzexu" && \
     git config --global user.email "ricol.xwz@outlook.com" && \
     pip install --upgrade pip && \
