--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.12.1-alpine3.19
 LABEL maintainer="wenzexu"
+ARG USERNAME=wenzexu
+ARG GROUPNAME=devusers
+ARG USER_UID=1001
+ARG USER_GID=$USER_UID
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 COPY ./requirements.txt /tmp/requirements.txt
@@ -10,5 +14,6 @@ RUN apk update && \
     pip install --upgrade pip && \
     pip install -r /tmp/requirements.txt && \
     rm -rf /tmp/requirements.txt && \
-    adduser --disabled-password wenzexu
-USER wenzexu
+    addgroup -g $USER_GID $GROUPNAME && \
+    adduser -u $USER_UID -G $GROUPNAME -D wenzexu
+USER $USERNAME
