--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,9 +14,7 @@
 			]
 		}
 	},
-	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {}
-	}
+	"runArgs": ["--add-host=host.docker.internal:host-gateway"]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
